# KairoGeometry

./: .gitignore  .gitmodules  AABB.cppm  CMakeLists.txt  Capsule.cppm  ClosestPoint.cppm  Distance.cppm  Frustum.cppm  Intersection.cppm  KairoGeometry.cppm  Line.cppm  OBB.cppm  Plane.cppm  README.md  Ray.cppm  Segment.cppm  Sphere.cppm  Triangle.cppm
tests/: GeometryTests.cpp  smoke.cpp
visual/: README.md  VisualTests.cpp  geometry_visual_tests.html  server.py
